dark mode fixes

--- a/src/Calendar.scss
+++ b/src/Calendar.scss
@@ -2,15 +2,34 @@
 .fc .fc-scrollgrid-section > td,
 .fc .fc-timegrid-axis {
   border-color: transparent;
+
+  .chakra-ui-dark & {
+    border-color: transparent;
+  }
 }
 
 .fc .fc-timegrid-slot {
   border-left-color: transparent;
+
+  .chakra-ui-dark & {
+    border-color: var(--chakra-colors-whiteAlpha-600);
+    border-left-color: transparent;
+  }
+}
+
+.fc-theme-standard td, .fc-theme-standard th {
+  .chakra-ui-dark & {
+    border-color: var(--chakra-colors-whiteAlpha-600);
+  }
 }
 
 .fc .fc-scrollgrid-section > th:nth-child(1),
 .fc .fc-col-header-cell:last-child {
   border-right-color: transparent;
+
+  .chakra-ui-dark & {
+    border-right-color: transparent;
+  }
 }
 
 .fc .fc-scrollgrid-section-sticky > * {
@@ -19,6 +38,10 @@
 
 .fc .fc-col-header-cell .fc-scrollgrid-sync-inner {
   background: var(--chakra-colors-chakra-body-bg);
+}
+
+.fc .fc-timegrid-event-harness-inset .fc-timegrid-event {
+  box-shadow: var(--chakra-colors-chakra-body-bg) 0px 0px 0px 1px;
 }
 
 .fc .fc-scroller-harness {
